--- a/YabaAndroid/Yaba/src/main/res/values/strings.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">Yaba</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Configuración</string>
+    <string name="action_share">Compartir</string>
+    <string name="action_delete">Borrar</string>
+    <string name="action_search">Buscar</string>
+    <string name="empty_list">La lista está vacía</string>
 
 </resources>
