--- a/YabaAndroid/Yaba/src/main/res/values/strings.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/strings.xml
@@ -15,5 +15,8 @@
     <string name="navigation_drawer_open">Abrir navigation drawer</string>
     <string name="navigation_drawer_close">Cerrar navigation drawer</string>
     <string name="line">Línea %1$s</string>
+    <string name="action_nfc_scan">Escanear con NFC</string>
+    <string name="activity_nfc_scan">Escanear con NFC</string>
+    <string name="nfc_mime_type">application/com.pilasvacias.yaba.beam</string>
 
 </resources>
