Fixed issue with ActionBar title in MainActivity. Added SettingsActivity.

--- a/YabaAndroid/Yaba/src/main/res/values/strings.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="action_nfc_scan">Escanear con NFC</string>
     <string name="activity_nfc_scan">Escanear con NFC</string>
     <string name="nfc_mime_type">application/com.pilasvacias.yaba.beam</string>
+    <string name="nfc_unavailable">Tu dispositivo no tiene NFC</string>
+    <string name="activity_settings">Configuración</string>
 
 </resources>
