--- a/YabaAndroid/Yaba/src/main/res/values/strings.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/strings.xml
@@ -22,6 +22,12 @@
     <string name="activity_settings">Configuración</string>
     <string name="search_hint">Introduce línea, parada o calle</string>
     <string name="empty_search">No se han encontrado resultados para esa búsqueda.</string>
+    <string name="empty_search_guide">
+        Introduce:\n
+        - Un número de parada (29045)\n
+        - Una o varias palabras del nombre de la parada (burgos 30)\n
+        - linea o l y seguida de un número de línea (poli l 8)
+    </string>
     <string name="developer">Desarrollador</string>
     <string name="open_source_licenses">Licencias de código abierto</string>
     <string name="yaba_version">Versión de Yaba</string>
